[package]
name = "mmapcell"
version = "0.2.2"
edition = "2021"
authors = ["Maxi Saparov <maxi.saparov@gmail.com>"]
description = "a simple wrapper for the memmap2 crate to cast mmap backed pointers to structs"
documentation = "https://docs.rs/mmapcell"
homepage = "https://github.com/mostlymaxi/mmapcell"
repository = "https://github.com/mostlymaxi/mmapcell"
readme = "README.md"
keywords = ["memmap2", "mmap", "utility"]
license = "MIT"
categories = ["memory-management", "data-structures", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# In edition 2024 this warns by default, might as well adhere to it early c:
unsafe_op_in_unsafe_fn = "warn"

[dependencies]
memmap2 = { version = "0.9.4" }
thiserror = "1.0.64"
